assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap');
html {
    height: 100%;
}

  body {
    text-transform: uppercase;
    font-family: 'Raleway', sans-serif;
    background-color: #111;
    background-repeat: no-repeat;
    display: flex;
    min-height: 100vh;
    flex-direction: column;
    justify-content: space-between;
    margin:0;
    padding:0;
    height:auto;
}

/*------- header --------*/

.navbar {
    width: 100%;
    text-align: center;
}

.fixheading {
    margin: 0 auto;
    left: 0;
    right: 0;
}

.title {
    font-size: 53px;
    width: 100%;
    padding-top: 5px;
    text-transform: uppercase;
    text-decoration: underline;
    text-align: center;
    letter-spacing: 8px;
    color: #ffffff;

}

ul {
   list-style-type: none;
   text-align: center;
   display: inline-block;
   color: #ffffff;
   margin: 0;
   padding: 0;
   background-color: transparent;   
}

li {
  float: left;
}

li a {
  font-family: 'Raleway', sans-serif;
  color: white;
  text-align: center;
  padding: 0 25px;
  text-decoration: none;
  letter-spacing: 3px;
  
}

li a:hover {
  background-color: #111;

}

#container  {
  background-image: url("../images/hotel-cart.jpg");
    min-width: 100vw;
    min-height: 100vh;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
}  



/*--- footer -----*/

#footer {
    color:#ffffff;
    font-family: 'Raleway', sans-serif;
    margin: 0 auto;
    display: inline-block;
    width: 100%;
    bottom: 0;
    text-align: center;
    position: static;

}

.icons {
    margin-right: 10px;
}

/*-----about page-----*/


  

#contactbground {
    background-image: url("../images/katharinebigtop.jpg");
    min-width: 100vw;
    min-height: 100vh;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;

}

